# egglog-experimental

./: Cargo.toml  Makefile  README.md  test_fresh.egg
.github/workflows/: build.yml
src/: fresh_macro.rs  fresh_macro_typed.rs  lib.rs  main.rs  multi_extract.rs  primitive.rs  rational.rs  scheduling.rs  set_cost.rs  size.rs  smt.rs  smt_bitvec.rs  smt_real.rs  stats.rs  sugar.rs  table_stats.rs
src/sugar/: comm_ring.rs  for.rs  mod.rs  with_ruleset.rs
tests/: carry-detection-rewrite.egg  files.rs  herbie-rational.egg  herbie-tutorial.egg  integration_test.rs  interval.egg  primitive-maybe-none-output-context.egg  primitive.egg  python_array_optimize.egg  real-inequalities.egg  smt-bitvec.egg  smt-bool.egg  smt-math.egg  smt-real.egg  stresstest_large_expr.egg  test_fresh.rs  unstable-fn-primitive-overload-inference.egg
tests/comm-ring/: comm-ring.egg
tests/fail-typecheck/: primitive-function-container-input.egg  primitive-output-context-mismatch.egg
tests/polynomials/: factor-rat.egg  factoring.egg  polynomial-basic.egg  polynomial-smt.egg
tests/polynomials/benchmark/: benchmark.py  polynomial-basic-rules.egg  polynomial-smt-rules.egg  rearranging_benchmark.py
tests/polynomials/benchmark/results/: benchmark_results.txt  rearranging_results.txt
tests/polynomials/benchmark/temp_tests/: test_basic_12.egg  test_basic_16.egg  test_basic_20.egg  test_basic_25.egg  test_basic_3.egg  test_basic_30.egg  test_basic_5.egg  test_basic_8.egg  test_smt_12.egg  test_smt_16.egg  test_smt_20.egg  test_smt_25.egg  test_smt_3.egg  test_smt_30.egg  test_smt_5.egg  test_smt_8.egg
tests/web-demo/: detailed-stats.egg  dynamic-cost.egg  node-limit.egg
