[package]
name = "egglog-experimental"
version = "0.1.0"
edition = "2024"

[[test]]
harness = false
name = "files"

[features]
default = ["bin"]
bin = ["egglog/bin"]

[dependencies]
egglog = { git = "https://github.com/egraphs-good/egglog.git", default-features = false, rev = "33f7994" }
egglog-ast = { git = "https://github.com/egraphs-good/egglog.git", default-features = false, rev = "33f7994" }
egglog-reports = { git = "https://github.com/egraphs-good/egglog.git", default-features = false, rev = "33f7994" }

num = "0.4.3"
lazy_static = "1.4"
log = "0.4"
smtlib = { git = "https://github.com/noahhuck/smtlib-rs.git", branch = "real-builtin" }
smtlib-lowlevel = { git = "https://github.com/noahhuck/smtlib-rs.git", branch = "real-builtin" }

[dev-dependencies]
glob = "0.3.1"
libtest-mimic = "0.8.1"
