[package]
name = "egglog-experimental"
version = "0.1.0"
edition = "2024"

[[test]]
harness = false
name = "files"

[features]
default = ["bin"]
bin = ["egglog/bin"]

[dependencies]
egglog = { git = "https://github.com/egraphs-good/egglog.git", default-features = false, rev = "ef6a9a6576468f2465d1fde6dd5e34d3505003a3" }
egglog-ast = { git = "https://github.com/egraphs-good/egglog.git", default-features = false, rev = "ef6a9a6576468f2465d1fde6dd5e34d3505003a3" }
egglog-reports = { git = "https://github.com/egraphs-good/egglog.git", default-features = false, rev = "ef6a9a6576468f2465d1fde6dd5e34d3505003a3" }

num = "0.4.3"
lazy_static = "1.4"
log = "0.4"

[dev-dependencies]
glob = "0.3.1"
libtest-mimic = "0.8.1"